@@ -1,171 +1,129 @@
-<?xml version="1.0" ?>
-<!--*- mode: xml -*--><!DOCTYPE glade-interface
-  SYSTEM 'http://glade.gnome.org/glade-2.0.dtd'>
+<?xml version="1.0"?>
+<!--*- mode: xml -*-->
 <interface>
-
-<object class="GtkWindow" id="window">
-  <property name="title"/>
-  <property name="type">GTK_WINDOW_TOPLEVEL</property>
-  <property name="window_position">GTK_WIN_POS_NONE</property>
-  <property name="modal">False</property>
-  <property name="resizable">True</property>
-  <property name="destroy_with_parent">False</property>
-  <property name="decorated">True</property>
-  <property name="skip_taskbar_hint">False</property>
-  <property name="skip_pager_hint">False</property>
-  <property name="type_hint">GDK_WINDOW_TYPE_HINT_NORMAL</property>
-  <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
-  <property name="focus_on_map">True</property>
-  <property name="urgency_hint">False</property>
-
-  <child>
-    <object class="GtkVBox" id="content_box">
-      <property name="visible">True</property>
-      <property name="homogeneous">False</property>
-      <property name="spacing">0</property>
-
-      <child>
-	<object class="GtkHBox" id="video_box">
-	  <property name="visible">True</property>
-	  <property name="homogeneous">False</property>
-	  <property name="spacing">0</property>
-
-	  <child>
-	    <placeholder/>
-	  </child>
-	</object>
-	<packing>
-	  <property name="padding">0</property>
-	  <property name="expand">True</property>
-	  <property name="fill">True</property>
-	</packing>
-      </child>
-
-      <child>
-	<object class="GtkHBox" id="controls">
-	  <property name="visible">True</property>
-	  <property name="homogeneous">False</property>
-	  <property name="spacing">0</property>
-
-	  <child>
-	    <object class="Custom" id="pp_button">
-	      <property name="visible">True</property>
-	      <property name="creation_function">totem_pp_create</property>
-	      <property name="int1">0</property>
-	      <property name="int2">0</property>
-	      <property name="last_modification_time">Sat, 16 Jun 2007 18:48:33 GMT</property>
-	    </object>
-	    <packing>
-	      <property name="padding">0</property>
-	      <property name="expand">False</property>
-	      <property name="fill">False</property>
-	    </packing>
-	  </child>
-
-	  <child>
-	    <object class="GtkHScale" id="time_hscale">
-	      <property name="visible">True</property>
-	      <property name="can_focus">True</property>
-	      <property name="draw_value">False</property>
-	      <property name="value_pos">GTK_POS_TOP</property>
-	      <property name="digits">1</property>
-	      <property name="update_policy">GTK_UPDATE_CONTINUOUS</property>
-	      <property name="inverted">False</property>
-	      <property name="adjustment">5 0 65535 1 10 0</property>
-	    </object>
-	    <packing>
-	      <property name="padding">0</property>
-	      <property name="expand">True</property>
-	      <property name="fill">True</property>
-	    </packing>
-	  </child>
-
-	  <child>
-	    <object class="Custom" id="volume_button">
-	      <property name="visible">True</property>
-	      <property name="creation_function">totem_volume_create</property>
-	      <property name="int1">0</property>
-	      <property name="int2">0</property>
-	      <property name="last_modification_time">Tue, 12 Jul 2005 20:30:15 GMT</property>
-	    </object>
-	    <packing>
-	      <property name="padding">0</property>
-	      <property name="expand">False</property>
-	      <property name="fill">False</property>
-	    </packing>
-	  </child>
-	</object>
-	<packing>
-	  <property name="padding">0</property>
-	  <property name="expand">False</property>
-	  <property name="fill">True</property>
-	</packing>
-      </child>
-
-      <child>
-	<object class="Custom" id="statusbar">
-	  <property name="visible">True</property>
-	  <property name="creation_function">totem_statusbar_create</property>
-	  <property name="int1">0</property>
-	  <property name="int2">0</property>
-	  <property name="last_modification_time">Mon, 30 Oct 2006 17:29:57 GMT</property>
-	</object>
-	<packing>
-	  <property name="padding">0</property>
-	  <property name="expand">False</property>
-	  <property name="fill">True</property>
-	</packing>
-      </child>
-    </object>
-  </child>
+  <object class="GtkAdjustment" id="adjustment1">
+    <property name="upper">65535</property>
+    <property name="lower">0</property>
+    <property name="page_increment">10</property>
+    <property name="value">5</property>
+    <property name="page_size">0</property>
+    <property name="step_increment">1</property>
+  </object>
+  <object class="GtkUIManager" id="uimanager1">
+    <child>
+      <object class="GtkActionGroup" id="actiongroup1">
+        <child>
+          <object class="GtkAction" id="copy_location1">
+            <property name="stock_id">gtk-copy</property>
+            <property name="name">copy_location1</property>
+            <signal handler="on_copy_location1_activate" name="activate"/>
+          </object>
+        </child>
+        <child>
+          <object class="GtkAction" id="preferences1">
+            <property name="stock_id">gtk-preferences</property>
+            <property name="name">preferences1</property>
+            <property name="visible">False</property>
+            <signal handler="on_preferences1_activate" name="activate"/>
+          </object>
+        </child>
+        <child>
+          <object class="GtkAction" id="about1">
+            <property name="stock_id">gtk-about</property>
+            <property name="name">about1</property>
+            <signal handler="on_about1_activate" name="activate"/>
+          </object>
+        </child>
+      </object>
+    </child>
+    <ui>
+      <popup name="menu">
+        <menuitem action="copy_location1"/>
+        <menuitem action="preferences1"/>
+        <separator/>
+        <menuitem action="about1"/>
+      </popup>
+    </ui>
+  </object>
+  <object class="GtkVBox" id="content_box">
+    <property name="visible">True</property>
+    <property name="homogeneous">False</property>
+    <property name="spacing">0</property>
+    <child>
+      <object class="GtkHBox" id="video_box">
+        <property name="visible">True</property>
+        <property name="homogeneous">False</property>
+        <property name="spacing">0</property>
+        <child>
+          <placeholder/>
+        </child>
+      </object>
+      <packing>
+        <property name="padding">0</property>
+        <property name="expand">True</property>
+        <property name="fill">True</property>
+      </packing>
+    </child>
+    <child>
+      <object class="GtkHBox" id="controls">
+        <property name="visible">True</property>
+        <property name="homogeneous">False</property>
+        <property name="spacing">0</property>
+        <child>
+          <object class="TotemGlowButton" id="pp_button">
+            <property name="visible">True</property>
+          </object>
+          <packing>
+            <property name="padding">0</property>
+            <property name="expand">False</property>
+            <property name="fill">False</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkHScale" id="time_hscale">
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="draw_value">False</property>
+            <property name="value_pos">GTK_POS_TOP</property>
+            <property name="digits">1</property>
+            <property name="update_policy">GTK_UPDATE_CONTINUOUS</property>
+            <property name="inverted">False</property>
+            <property name="adjustment">adjustment1</property>
+          </object>
+          <packing>
+            <property name="padding">0</property>
+            <property name="expand">True</property>
+            <property name="fill">True</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkVolumeButton" id="volume_button">
+            <property name="visible">True</property>
+          </object>
+          <packing>
+            <property name="padding">0</property>
+            <property name="expand">False</property>
+            <property name="fill">False</property>
+          </packing>
+        </child>
+      </object>
+      <packing>
+        <property name="padding">0</property>
+        <property name="expand">False</property>
+        <property name="fill">True</property>
+      </packing>
+    </child>
+    <child>
+      <object class="TotemStatusbar" id="statusbar">
+        <property name="visible">True</property>
+      </object>
+      <packing>
+        <property name="padding">0</property>
+        <property name="expand">False</property>
+        <property name="fill">True</property>
+      </packing>
+    </child>
+  </object>
+  <object class="GtkMenu" constructor="uimanager1" id="menu">
 </object>
-
-<object class="GtkMenu" id="menu">
-
-  <child>
-    <object class="GtkImageMenuItem" id="copy_location1">
-      <property name="visible">True</property>
-      <property name="label" translatable="yes">_Copy Location</property>
-      <property name="use_underline">True</property>
-      <signal handler="on_copy_location1_activate" last_modification_time="Tue, 20 Jun 2006 14:58:42 GMT" name="activate"/>
-
-      <child internal-child="image">
-	<object class="GtkImage" id="image1">
-	  <property name="visible">True</property>
-	  <property name="stock">gtk-copy</property>
-	  <property name="icon_size">1</property>
-	  <property name="xalign">0.5</property>
-	  <property name="yalign">0.5</property>
-	  <property name="xpad">0</property>
-	  <property name="ypad">0</property>
-	</object>
-      </child>
-    </object>
-  </child>
-
-  <child>
-    <object class="GtkImageMenuItem" id="preferences1">
-      <property name="visible">True</property>
-      <property name="label">gtk-preferences</property>
-      <property name="use_stock">True</property>
-      <signal handler="on_preferences1_activate" last_modification_time="Tue, 12 Jul 2005 20:29:35 GMT" name="activate"/>
-    </object>
-  </child>
-
-  <child>
-    <object class="GtkSeparatorMenuItem" id="separator1">
-      <property name="visible">True</property>
-    </object>
-  </child>
-
-  <child>
-    <object class="GtkImageMenuItem" id="about1">
-      <property name="visible">True</property>
-      <property name="label">gtk-about</property>
-      <property name="use_stock">True</property>
-      <signal handler="on_about1_activate" last_modification_time="Tue, 12 Jul 2005 20:29:35 GMT" name="activate"/>
-    </object>
-  </child>
-</object>
-
 </interface>
