@@ -1,3 +1,11 @@
+2007-07-09  Bastien Nocera  <hadess@hadess.net>
+
+	* browser-plugin/totem-plugin-viewer.c: (on_preferences1_activate),
+	(totem_embedded_construct):
+	* data/mozilla-viewer.ui: Patch from Sunil Mohan Adapa
+	<sunilmohan@gnu.org.in> to fix the UI loading, and related problems
+	in the browser plugin viewer (Closes: #454638)
+
 2007-07-05  Bastien Nocera  <hadess@hadess.net>
 
 	* Load of files: Patch from Philip Withnall <pwithnall@svn.gnome.org>
